--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <script>
       // --- PASTE YOUR FIREBASE CONFIG HERE FROM PHASE 1 ---
       const myConfig = {
-        apiKey: "PASTE_YOUR_API_KEY_HERE",
-        authDomain: "PASTE_YOUR_PROJECT_ID.firebaseapp.com",
-        projectId: "PASTE_YOUR_PROJECT_ID",
-        storageBucket: "PASTE_YOUR_PROJECT_ID.appspot.com",
-        messagingSenderId: "PASTE_SENDER_ID",
-        appId: "PASTE_APP_ID"
+        apiKey: "AIzaSyBdzfasXLtnSAhmmuX3UTSOctc94_QSTsA",
+        authDomain: "seel-app-b8994.firebaseapp.com",
+        projectId: "seel-app-b8994",
+        storageBucket: "seel-app-b8994.firebasestorage.app",
+        messagingSenderId: "405136994306",
+        appId: "1:405136994306:web:a44ed32f666cbed32ef71b"
       };
       // ----------------------------------------------------
       
