--- a/index.html
+++ b/index.html
@@ -1,30 +1,88 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Seel</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Seel Community</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      // --- PASTE YOUR FIREBASE CONFIG HERE FROM PHASE 1 ---
-      const myConfig = {
-        apiKey: "AIzaSyBdzfasXLtnSAhmmuX3UTSOctc94_QSTsA",
-        authDomain: "seel-app-b8994.firebaseapp.com",
-        projectId: "seel-app-b8994",
-        storageBucket: "seel-app-b8994.firebasestorage.app",
-        messagingSenderId: "405136994306",
-        appId: "1:405136994306:web:a44ed32f666cbed32ef71b"
-      };
-      // ----------------------------------------------------
-      
-      // This allows the React code to read it
-      window.__firebase_config = JSON.stringify(myConfig);
-      window.__app_id = "seel-live-v1"; 
-    </script>
-  </head>
-  <body>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
+</head>
+<body class="bg-gray-100">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <script type="text/babel">
+        const firebaseConfig = {
+        apiKey: "AIzaSyBdzfasXLtnSAhmmuX3UTSOctc94_QSTsA",
+  authDomain: "seel-app-b8994.firebaseapp.com",
+  projectId: "seel-app-b8994",
+  storageBucket: "seel-app-b8994.firebasestorage.app",
+  messagingSenderId: "405136994306",
+  appId: "1:405136994306:web:a44ed32f666cbed32ef71b"
+
+        };
+
+        firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+        const db = firebase.firestore();
+        const { useState, useEffect } = React;
+
+        function App() {
+            const [user, setUser] = useState(null);
+            const [posts, setPosts] = useState([]);
+            const [newPost, setNewPost] = useState("");
+
+            useEffect(() => {
+                const unsubscribeAuth = auth.onAuthStateChanged(u => setUser(u));
+                const unsubscribePosts = db.collection("posts")
+                    .orderBy("timestamp", "desc")
+                    .onSnapshot(s => setPosts(s.docs.map(d => ({id: d.id, ...d.data()}))), e => console.error(e));
+                return () => { unsubscribeAuth(); unsubscribePosts(); };
+            }, []);
+
+            const handlePost = async (e) => {
+                e.preventDefault();
+                if (!newPost.trim() || !user) return;
+                await db.collection("posts").add({
+                    text: newPost,
+                    user: user.displayName || "Anonymous Seal",
+                    timestamp: firebase.firestore.FieldValue.serverTimestamp()
+                });
+                setNewPost("");
+            };
+
+            if (!user) return (
+                <div className="flex items-center justify-center min-h-screen">
+                    <button onClick={() => auth.signInWithPopup(new firebase.auth.GoogleAuthProvider())} className="bg-blue-600 text-white px-8 py-3 rounded-full font-bold shadow-lg">Sign in to Seel 🦭</button>
+                </div>
+            );
+
+            return (
+                <div className="max-w-2xl mx-auto p-4">
+                    <div className="flex justify-between items-center mb-6 bg-white p-4 rounded-xl shadow">
+                        <h1 className="text-2xl font-bold text-blue-600">Seel Feed</h1>
+                        <button onClick={() => auth.signOut()} className="text-sm text-gray-500">Logout</button>
+                    </div>
+                    <form onSubmit={handlePost} className="mb-6">
+                        <textarea value={newPost} onChange={e => setNewPost(e.target.value)} className="w-full p-4 rounded-xl shadow border-none focus:ring-2 focus:ring-blue-500" placeholder="Say something..."></textarea>
+                        <button className="mt-2 bg-blue-600 text-white px-6 py-2 rounded-lg font-bold float-right">Post</button>
+                    </form>
+                    <div className="space-y-4 clear-both">
+                        {posts.map(p => (
+                            <div key={p.id} className="bg-white p-4 rounded-xl shadow">
+                                <p className="font-bold text-blue-500 text-xs">{p.user}</p>
+                                <p className="text-gray-800">{p.text}</p>
+                            </div>
+                        ))}
+                    </div>
+                </div>
+            );
+        }
+        ReactDOM.createRoot(document.getElementById('root')).render(<App />);
+    </script>
+</body>
 </html>
 
