--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
+    <style>
+        body { background: #f0f9ff; margin: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+        .seal-float { animation: float 3s ease-in-out infinite; }
+        @keyframes float { 0%, 100% { transform: translateY(0) rotate(0deg); } 50% { transform: translateY(-15px) rotate(5deg); } }
+        .hide-scroll::-webkit-scrollbar { display: none; }
+        .hide-scroll { -ms-overflow-style: none; scrollbar-width: none; }
+    </style>
 </head>
-<body class="bg-gray-100">
+<body>
     <div id="root"></div>
+
     <script type="text/babel">
+        // --- YOUR CONFIGURATION ---
         const firebaseConfig = {
-        apiKey: "AIzaSyBdzfasXLtnSAhmmuX3UTSOctc94_QSTsA",
+           apiKey: "AIzaSyBdzfasXLtnSAhmmuX3UTSOctc94_QSTsA",
   authDomain: "seel-app-b8994.firebaseapp.com",
   projectId: "seel-app-b8994",
   storageBucket: "seel-app-b8994.firebasestorage.app",
@@ -25,63 +34,123 @@
 
         };
 
-        firebase.initializeApp(firebaseConfig);
+        // Init Firebase
+        if (!firebase.apps.length) {
+            firebase.initializeApp(firebaseConfig);
+        }
         const auth = firebase.auth();
         const db = firebase.firestore();
-        const { useState, useEffect } = React;
+        const { useState, useEffect, useRef } = React;
 
         function App() {
             const [user, setUser] = useState(null);
             const [posts, setPosts] = useState([]);
-            const [newPost, setNewPost] = useState("");
+            const [text, setText] = useState("");
+            const [loading, setLoading] = useState(true);
+            const scrollRef = useRef(null);
 
             useEffect(() => {
-                const unsubscribeAuth = auth.onAuthStateChanged(u => setUser(u));
-                const unsubscribePosts = db.collection("posts")
-                    .orderBy("timestamp", "desc")
-                    .onSnapshot(s => setPosts(s.docs.map(d => ({id: d.id, ...d.data()}))), e => console.error(e));
-                return () => { unsubscribeAuth(); unsubscribePosts(); };
+                const unsubAuth = auth.onAuthStateChanged(u => {
+                    setUser(u);
+                    setLoading(false);
+                });
+                
+                const unsubPosts = db.collection("posts")
+                    .orderBy("timestamp", "asc")
+                    .limitToLast(40)
+                    .onSnapshot(s => {
+                        setPosts(s.docs.map(d => ({id: d.id, ...d.data()})));
+                        setTimeout(() => scrollRef.current?.scrollIntoView({ behavior: 'smooth' }), 100);
+                    });
+
+                return () => { unsubAuth(); unsubPosts(); };
             }, []);
 
-            const handlePost = async (e) => {
+            const sendPost = async (e) => {
                 e.preventDefault();
-                if (!newPost.trim() || !user) return;
+                if (!text.trim() || !user) return;
+                const msg = text;
+                setText("");
                 await db.collection("posts").add({
-                    text: newPost,
-                    user: user.displayName || "Anonymous Seal",
+                    text: msg,
+                    user: user.displayName || "Member",
+                    photo: user.photoURL || "https://ui-avatars.com/api/?name=" + user.displayName,
+                    uid: user.uid,
                     timestamp: firebase.firestore.FieldValue.serverTimestamp()
                 });
-                setNewPost("");
             };
 
+            if (loading) return (
+                <div className="h-screen flex flex-col items-center justify-center bg-blue-50">
+                    <div className="seal-float text-6xl">🦭</div>
+                    <p className="mt-4 text-blue-400 font-bold tracking-widest animate-pulse">LOADING SEEL...</p>
+                </div>
+            );
+
             if (!user) return (
-                <div className="flex items-center justify-center min-h-screen">
-                    <button onClick={() => auth.signInWithPopup(new firebase.auth.GoogleAuthProvider())} className="bg-blue-600 text-white px-8 py-3 rounded-full font-bold shadow-lg">Sign in to Seel 🦭</button>
+                <div className="h-screen flex flex-col items-center justify-center p-6 bg-gradient-to-br from-blue-400 to-blue-700 text-white">
+                    <div className="seal-float text-8xl mb-4">🦭</div>
+                    <h1 className="text-6xl font-black mb-2 italic tracking-tighter">SEEL</h1>
+                    <p className="mb-10 text-blue-100 font-medium tracking-wide">THE PRIVATE ICEBERG</p>
+                    <button 
+                        onClick={() => auth.signInWithPopup(new firebase.auth.GoogleAuthProvider())}
+                        className="bg-white text-blue-600 px-12 py-4 rounded-full font-black text-lg shadow-2xl hover:bg-blue-50 transition-all active:scale-95"
+                    >
+                        Sign in with Google
+                    </button>
                 </div>
             );
 
             return (
-                <div className="max-w-2xl mx-auto p-4">
-                    <div className="flex justify-between items-center mb-6 bg-white p-4 rounded-xl shadow">
-                        <h1 className="text-2xl font-bold text-blue-600">Seel Feed</h1>
-                        <button onClick={() => auth.signOut()} className="text-sm text-gray-500">Logout</button>
-                    </div>
-                    <form onSubmit={handlePost} className="mb-6">
-                        <textarea value={newPost} onChange={e => setNewPost(e.target.value)} className="w-full p-4 rounded-xl shadow border-none focus:ring-2 focus:ring-blue-500" placeholder="Say something..."></textarea>
-                        <button className="mt-2 bg-blue-600 text-white px-6 py-2 rounded-lg font-bold float-right">Post</button>
-                    </form>
-                    <div className="space-y-4 clear-both">
+                <div className="flex flex-col h-screen max-w-2xl mx-auto bg-white shadow-xl overflow-hidden">
+                    {/* Header */}
+                    <header className="p-4 border-b bg-blue-600 text-white flex justify-between items-center shadow-md z-10">
+                        <div className="flex items-center gap-2">
+                            <span className="text-2xl">🦭</span>
+                            <h1 className="font-black text-xl tracking-tight uppercase">Seel Community</h1>
+                        </div>
+                        <button onClick={() => auth.signOut()} className="opacity-70 hover:opacity-100 text-[10px] font-bold border border-white/30 px-2 py-1 rounded">LOGOUT</button>
+                    </header>
+
+                    {/* Feed */}
+                    <div className="flex-1 overflow-y-auto p-4 space-y-4 bg-gray-50 hide-scroll">
+                        {posts.length === 0 && (
+                            <div className="h-full flex flex-col items-center justify-center opacity-20 italic">
+                                <p>No posts yet... break the ice!</p>
+                            </div>
+                        )}
                         {posts.map(p => (
-                            <div key={p.id} className="bg-white p-4 rounded-xl shadow">
-                                <p className="font-bold text-blue-500 text-xs">{p.user}</p>
-                                <p className="text-gray-800">{p.text}</p>
+                            <div key={p.id} className="flex gap-3 items-start animate-in fade-in slide-in-from-bottom-2">
+                                <img src={p.photo} className="w-8 h-8 rounded-full shadow-sm border border-blue-200" referrerPolicy="no-referrer" />
+                                <div className="flex flex-col max-w-[85%]">
+                                    <span className="text-[10px] font-bold text-blue-400 mb-0.5 uppercase">{p.user}</span>
+                                    <div className="bg-white text-gray-800 p-3 rounded-2xl rounded-tl-none shadow-sm border border-blue-50">
+                                        {p.text}
+                                    </div>
+                                </div>
                             </div>
                         ))}
+                        <div ref={scrollRef} />
                     </div>
+
+                    {/* Input Bar */}
+                    <form onSubmit={sendPost} className="p-4 border-t bg-white flex gap-2 items-center">
+                        <input 
+                            value={text}
+                            onChange={e => setText(e.target.value)}
+                            placeholder="Message the iceberg..."
+                            className="flex-1 bg-gray-100 rounded-full px-5 py-3 focus:outline-none focus:ring-2 focus:ring-blue-400 transition-all text-sm"
+                        />
+                        <button className="bg-blue-600 text-white w-10 h-10 rounded-full flex items-center justify-center shadow-lg hover:bg-blue-700 active:scale-90 transition-all">
+                            <svg className="w-5 h-5 fill-current" viewBox="0 0 20 20"><path d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"/></svg>
+                        </button>
+                    </form>
                 </div>
             );
         }
-        ReactDOM.createRoot(document.getElementById('root')).render(<App />);
+
+        const root = ReactDOM.createRoot(document.getElementById('root'));
+        root.render(<App />);
     </script>
 </body>
 </html>
