--- a/index.html
+++ b/index.html
@@ -1,157 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seel Community</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Seel</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
-    <style>
-        body { background: #f0f9ff; margin: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
-        .seal-float { animation: float 3s ease-in-out infinite; }
-        @keyframes float { 0%, 100% { transform: translateY(0) rotate(0deg); } 50% { transform: translateY(-15px) rotate(5deg); } }
-        .hide-scroll::-webkit-scrollbar { display: none; }
-        .hide-scroll { -ms-overflow-style: none; scrollbar-width: none; }
-    </style>
-</head>
-<body>
-    <div id="root"></div>
-
-    <script type="text/babel">
-        // --- YOUR CONFIGURATION ---
-        const firebaseConfig = {
-           apiKey: "AIzaSyBdzfasXLtnSAhmmuX3UTSOctc94_QSTsA",
+    <script>
+      // --- PASTE YOUR FIREBASE CONFIG HERE FROM PHASE 1 ---
+      const myConfig = {
+         apiKey: "AIzaSyBdzfasXLtnSAhmmuX3UTSOctc94_QSTsA",
   authDomain: "seel-app-b8994.firebaseapp.com",
   projectId: "seel-app-b8994",
   storageBucket: "seel-app-b8994.firebasestorage.app",
   messagingSenderId: "405136994306",
   appId: "1:405136994306:web:a44ed32f666cbed32ef71b"
 
-        };
-
-        // Init Firebase
-        if (!firebase.apps.length) {
-            firebase.initializeApp(firebaseConfig);
-        }
-        const auth = firebase.auth();
-        const db = firebase.firestore();
-        const { useState, useEffect, useRef } = React;
-
-        function App() {
-            const [user, setUser] = useState(null);
-            const [posts, setPosts] = useState([]);
-            const [text, setText] = useState("");
-            const [loading, setLoading] = useState(true);
-            const scrollRef = useRef(null);
-
-            useEffect(() => {
-                const unsubAuth = auth.onAuthStateChanged(u => {
-                    setUser(u);
-                    setLoading(false);
-                });
-                
-                const unsubPosts = db.collection("posts")
-                    .orderBy("timestamp", "asc")
-                    .limitToLast(40)
-                    .onSnapshot(s => {
-                        setPosts(s.docs.map(d => ({id: d.id, ...d.data()})));
-                        setTimeout(() => scrollRef.current?.scrollIntoView({ behavior: 'smooth' }), 100);
-                    });
-
-                return () => { unsubAuth(); unsubPosts(); };
-            }, []);
-
-            const sendPost = async (e) => {
-                e.preventDefault();
-                if (!text.trim() || !user) return;
-                const msg = text;
-                setText("");
-                await db.collection("posts").add({
-                    text: msg,
-                    user: user.displayName || "Member",
-                    photo: user.photoURL || "https://ui-avatars.com/api/?name=" + user.displayName,
-                    uid: user.uid,
-                    timestamp: firebase.firestore.FieldValue.serverTimestamp()
-                });
-            };
-
-            if (loading) return (
-                <div className="h-screen flex flex-col items-center justify-center bg-blue-50">
-                    <div className="seal-float text-6xl">🦭</div>
-                    <p className="mt-4 text-blue-400 font-bold tracking-widest animate-pulse">LOADING SEEL...</p>
-                </div>
-            );
-
-            if (!user) return (
-                <div className="h-screen flex flex-col items-center justify-center p-6 bg-gradient-to-br from-blue-400 to-blue-700 text-white">
-                    <div className="seal-float text-8xl mb-4">🦭</div>
-                    <h1 className="text-6xl font-black mb-2 italic tracking-tighter">SEEL</h1>
-                    <p className="mb-10 text-blue-100 font-medium tracking-wide">THE PRIVATE ICEBERG</p>
-                    <button 
-                        onClick={() => auth.signInWithPopup(new firebase.auth.GoogleAuthProvider())}
-                        className="bg-white text-blue-600 px-12 py-4 rounded-full font-black text-lg shadow-2xl hover:bg-blue-50 transition-all active:scale-95"
-                    >
-                        Sign in with Google
-                    </button>
-                </div>
-            );
-
-            return (
-                <div className="flex flex-col h-screen max-w-2xl mx-auto bg-white shadow-xl overflow-hidden">
-                    {/* Header */}
-                    <header className="p-4 border-b bg-blue-600 text-white flex justify-between items-center shadow-md z-10">
-                        <div className="flex items-center gap-2">
-                            <span className="text-2xl">🦭</span>
-                            <h1 className="font-black text-xl tracking-tight uppercase">Seel Community</h1>
-                        </div>
-                        <button onClick={() => auth.signOut()} className="opacity-70 hover:opacity-100 text-[10px] font-bold border border-white/30 px-2 py-1 rounded">LOGOUT</button>
-                    </header>
-
-                    {/* Feed */}
-                    <div className="flex-1 overflow-y-auto p-4 space-y-4 bg-gray-50 hide-scroll">
-                        {posts.length === 0 && (
-                            <div className="h-full flex flex-col items-center justify-center opacity-20 italic">
-                                <p>No posts yet... break the ice!</p>
-                            </div>
-                        )}
-                        {posts.map(p => (
-                            <div key={p.id} className="flex gap-3 items-start animate-in fade-in slide-in-from-bottom-2">
-                                <img src={p.photo} className="w-8 h-8 rounded-full shadow-sm border border-blue-200" referrerPolicy="no-referrer" />
-                                <div className="flex flex-col max-w-[85%]">
-                                    <span className="text-[10px] font-bold text-blue-400 mb-0.5 uppercase">{p.user}</span>
-                                    <div className="bg-white text-gray-800 p-3 rounded-2xl rounded-tl-none shadow-sm border border-blue-50">
-                                        {p.text}
-                                    </div>
-                                </div>
-                            </div>
-                        ))}
-                        <div ref={scrollRef} />
-                    </div>
-
-                    {/* Input Bar */}
-                    <form onSubmit={sendPost} className="p-4 border-t bg-white flex gap-2 items-center">
-                        <input 
-                            value={text}
-                            onChange={e => setText(e.target.value)}
-                            placeholder="Message the iceberg..."
-                            className="flex-1 bg-gray-100 rounded-full px-5 py-3 focus:outline-none focus:ring-2 focus:ring-blue-400 transition-all text-sm"
-                        />
-                        <button className="bg-blue-600 text-white w-10 h-10 rounded-full flex items-center justify-center shadow-lg hover:bg-blue-700 active:scale-90 transition-all">
-                            <svg className="w-5 h-5 fill-current" viewBox="0 0 20 20"><path d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"/></svg>
-                        </button>
-                    </form>
-                </div>
-            );
-        }
-
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<App />);
+      };
+      // ----------------------------------------------------
+      
+      // This allows the React code to read it
+      window.__firebase_config = JSON.stringify(myConfig);
+      window.__app_id = "seel-live-v1"; 
     </script>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
-
